# libtmsolve

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  FUNCTIONS.md  INSTALL.md  INT_FUNCTIONS.md  README.md  TC-mingw.cmake  TODO  complex.c  equation.c  equation.h  function.c  function.h  install.sh  internals.c  internals.h  known_issues.txt  libtmsolve.h  m_errors.h  matrix.c  matrix.h  parser.c  parser.h  pyproject.toml  scientific.c  scientific.h  string_tools.c  string_tools.h
doxygen/: Doxyfile
doxygen/doxygen/html/: graph_legend.html  index.html  navtreedata.js
include/: base_n.h  bitwise.h  c_complex_to_cpp.h  common.h  error_handler.h  evaluator.h  evaluator_common.h  function.h  hashmap.h  hashset.h  int_parser.h  internals.h  libtmsolve.h  m_errors.h  matrix.h  parser.h  parser_common.h  scientific.h  string_tools.h  tms_complex.h  tms_math_strs.h  version.h
pending/: equation.c  equation.h  matrix.c
python/tmsolve/: __init__.py
src/: bitwise.c  c++_binder.cpp  error_handler.c  evaluator.c  function.c  hashmap.c  hashset.c  int_parser.c  internals.c  matrix.c  parser.c  parser_common.h  scientific.c  string_tools.c  tms_complex.c  version.c
tests/: accuracy_test.txt  rules_test.txt  tms_test.c
