[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=2.9"]
build-backend = "scikit_build_core.build"

[project]
name = "tmsolve"
version = "3.1.0"
description = "Library for parsing mathematical expressions"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Ahmad Ismail", email = "a.h.ismail.dev@gmail.com" },
]
classifiers = [
    "License :: LGPL-2.1-only",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/a-h-ismail/libtmsolve"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"
